syntax = "proto3";

import "common/model/model.proto";
import "auth/v1/model/model.proto";
import "tests/v1/model/model.proto";

option java_multiple_files = true;
option java_package = "com.voteva.tests.grpc.model.v1";


message GGetTestCategoriesRequest {
    GAuthentication authentication = 1;
}

message GGetAllTestsRequest {
    GAuthentication authentication = 1;
    GPageable pageable = 2;
}

message GGetTestsByCategoryRequest {
    GAuthentication authentication = 1;
    GPageable pageable = 2;
    string category = 3;
}

message GGetTestRequest {
    GAuthentication authentication = 1;
    GUuid testUid = 2;
}

message GAddTestRequest {
    GAuthentication authentication = 1;
    string testName = 2;
    string testCategory = 3;
    repeated GQuestion questions = 4;
}

message GRemoveTestRequest {
    GAuthentication authentication = 1;
    GUuid testUid = 2;
}
